Se agrega controlador y modelo de grupo_investigacion
