# swagger/swagger.json
@@ -188,6 +188,179 @@
                 }
             }
         },
+        "/grupo_investigacion/": {
+            "get": {
+                "tags": [
+                    "grupo_investigacion"
+                ],
+                "description": "get GrupoInvestigacion",
+                "operationId": "GrupoInvestigacionController.Get All",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "query",
+                        "description": "Filter. e.g. col1:v1,col2:v2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "fields",
+                        "description": "Fields returned. e.g. col1,col2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "sortby",
+                        "description": "Sorted-by fields. e.g. col1,col2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "order",
+                        "description": "Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "limit",
+                        "description": "Limit the size of result set. Must be an integer",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "offset",
+                        "description": "Start position of result set. Must be an integer",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.GrupoInvestigacion"
+                        }
+                    },
+                    "403": {
+                        "description": ""
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "grupo_investigacion"
+                ],
+                "description": "create GrupoInvestigacion",
+                "operationId": "GrupoInvestigacionController.Post",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "body for GrupoInvestigacion content",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.GrupoInvestigacion"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "{int} models.GrupoInvestigacion"
+                    },
+                    "403": {
+                        "description": "body is empty"
+                    }
+                }
+            }
+        },
+        "/grupo_investigacion/{id}": {
+            "get": {
+                "tags": [
+                    "grupo_investigacion"
+                ],
+                "description": "get GrupoInvestigacion by id",
+                "operationId": "GrupoInvestigacionController.Get One",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "The key for staticblock",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.GrupoInvestigacion"
+                        }
+                    },
+                    "403": {
+                        "description": ":id is empty"
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "grupo_investigacion"
+                ],
+                "description": "update the GrupoInvestigacion",
+                "operationId": "GrupoInvestigacionController.Put",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "The id you want to update",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "body for GrupoInvestigacion content",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.GrupoInvestigacion"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.GrupoInvestigacion"
+                        }
+                    },
+                    "403": {
+                        "description": ":id is not int"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "grupo_investigacion"
+                ],
+                "description": "delete the GrupoInvestigacion",
+                "operationId": "GrupoInvestigacionController.Delete",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "The id you want to delete",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{string} delete success!"
+                    },
+                    "403": {
+                        "description": "id is empty"
+                    }
+                }
+            }
+        },
         "/nucleo_basico_conocimiento/": {
             "get": {
                 "tags": [
@@ -1081,6 +1254,32 @@
                 }
             }
         },
+        "models.GrupoInvestigacion": {
+            "title": "GrupoInvestigacion",
+            "type": "object",
+            "properties": {
+                "Activo": {
+                    "type": "boolean"
+                },
+                "CodigoAbreviacion": {
+                    "type": "string"
+                },
+                "Descripcion": {
+                    "type": "string"
+                },
+                "Id": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "Nombre": {
+                    "type": "string"
+                },
+                "NumeroOrden": {
+                    "type": "number",
+                    "format": "double"
+                }
+            }
+        },
         "models.NucleoBasicoConocimiento": {
             "title": "NucleoBasicoConocimiento",
             "type": "object",
@@ -1258,6 +1457,10 @@
         {
             "name": "tipo_periodo",
             "description": "TipoPeriodoController operations for TipoPeriodo\n"
+        },
+        {
+            "name": "grupo_investigacion",
+            "description": "GrupoInvestigacionController operations for GrupoInvestigacion\n"
         }
     ]
 }
